<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="26dp"
        android:gravity="center">
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weight_used"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/weight_used_ET"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reps_perf"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/reps_perf_ET"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/calc_results_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_results"/>

        <TextView
            android:id="@+id/max_rep_result_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/est_max_result"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="16dp"
            android:text="@string/info1"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/info2"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>