<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <!--Exercise Name -Start -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_TV"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/exercise_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--Exercise Name -End -->
    <!-- Number of Sets -Start -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_sets_TV"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/number_sets_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <!-- Number of Sets -End -->

    <CheckBox
        android:id="@+id/main_move_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_check"/>

</LinearLayout>
