<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
                <!--Exercise Name -Start -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/select_TV"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/exercise_ET"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <!--Exercise Name -End -->
                <!-- Number of Sets -Start -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/enter_sets_TV"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/number_sets_ET"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="number"/>
                <!-- Number of Sets -End -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="42dp">

            <CheckBox
                android:id="@+id/main_move_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_check"/>

            <Button
                android:id="@+id/ok_exercise_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_button_text"/>
        </LinearLayout>


    <EditText
        android:id="@+id/notes_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="6"/>

    <Button
        android:id="@+id/save_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_button_text"/>
</LinearLayout>
